3.10) Implementing the API
-> CONCLUDED:
- REfactorings in GlobalEXception

* WORKING ON:
- transactions - REstassured tests with 2 bodies

* NEXT STEPS:
- MongoDb transactions
- Cacheable
- Modular Monolith
- Jenkins Pipeline

* FUTURE IMPLEMENTATIONS:
- Multiples DB's
- Multi-Tenancy
- Internationalization
- Exceptions - identify (Http 500, 400, 200)
- GPS
- Upload: Pictures + Files
- OAuth2/JWT authentication
- Push notifications