@@ -56,11 +56,7 @@ class ResourceAggregTest {
   @Autowired
   TestDbUtils dbUtils;
 
-  private Project project1, project2, project3;
-  private Task task1, task2;
-  private ProjectChild project1Child;
-  private List<Project> projectList;
-  private List<ProjectChild> projectChildList;
+  private Project project2;
 
 
   @BeforeAll
@@ -100,12 +96,12 @@ class ResourceAggregTest {
     globalTestMessage(testInfo.getTestMethod()
                               .toString(), "method-start");
 
-    project1 = projecNoID("C",
-                          "2020-05-05",
-                          "2021-05-05",
-                          1000L,
-                          of("UK", "USA")
-                         ).create();
+    Project project1 = projecNoID("C",
+                                  "2020-05-05",
+                                  "2021-05-05",
+                                  1000L,
+                                  of("UK", "USA")
+                                 ).create();
 
     project2 = projecNoID("B",
                           "2020-06-06",
@@ -114,38 +110,38 @@ class ResourceAggregTest {
                           of("UK", "USA")
                          ).create();
 
-    project3 = projecNoID("B",
-                          "2020-07-07",
-                          "2021-07-07",
-                          3000L,
-                          of("UK", "USA")
-                         ).create();
+    Project project3 = projecNoID("B",
+                                  "2020-07-07",
+                                  "2021-07-07",
+                                  3000L,
+                                  of("UK", "USA")
+                                 ).create();
 
-    projectList = asList(project1, project2);
+    List<Project> projectList = asList(project1, project2);
     Flux<Project> projectFlux = dbUtils.saveProjectList(projectList);
 
     dbUtils.countAndExecuteFlux(projectFlux, 2);
 
-    task1 = taskWithID("3",
-                       "Mark",
-                       1000L
-                      ).create();
-    task2 = taskWithID("4",
-                       "Mark Zuck",
-                       7000L
-                      ).create();
+    Task task1 = taskWithID("3",
+                            "Mark",
+                            1000L
+                           ).create();
+    Task task2 = taskWithID("4",
+                            "Mark Zuck",
+                            7000L
+                           ).create();
     Flux<Task> taskFlux = dbUtils.saveTaskList(singletonList(task1));
 
     dbUtils.countAndExecuteFlux(taskFlux, 1);
 
-    project1Child = ProjectChildBuilder.projectChildWithID("D",
-                                                           "2022-07-07",
-                                                           "2023-07-07",
-                                                           4000L,
-                                                           Arrays.asList(task1, task2)
-                                                          )
-                                       .create();
-    projectChildList = List.of(project1Child);
+    ProjectChild project1Child = ProjectChildBuilder.projectChildWithID("D",
+                                                                        "2022-07-07",
+                                                                        "2023-07-07",
+                                                                        4000L,
+                                                                        Arrays.asList(task1, task2)
+                                                                       )
+                                                    .create();
+    List<ProjectChild> projectChildList = List.of(project1Child);
     Flux<ProjectChild> projectChildFlux = dbUtils.saveProjectChildList(projectChildList);
     dbUtils.countAndExecuteFlux(projectChildFlux, 1);
 
