@@ -63,11 +63,8 @@ class ResourceTemplTest {
   @Autowired
   IServiceCrud serviceCrud;
 
-  private Project project1, project2, project3;
-  private Task task1, task2;
-  private ProjectChild project1Child;
+  private Project project1;
   private List<Project> projectList;
-  private List<ProjectChild> projectChildList;
 
 
   @BeforeAll
@@ -115,45 +112,38 @@ class ResourceTemplTest {
                           of("UK", "USA")
                          ).create();
 
-    project2 = projecNoID("B",
-                          "2020-06-06",
-                          "2021-06-06",
-                          2000L,
-                          of("UK", "USA")
-                         ).create();
-
-    project3 = projecNoID("B",
-                          "2020-07-07",
-                          "2021-07-07",
-                          3000L,
-                          of("UK", "USA")
-                         ).create();
+    Project project2 = projecNoID("B",
+                                  "2020-06-06",
+                                  "2021-06-06",
+                                  2000L,
+                                  of("UK", "USA")
+                                 ).create();
 
     projectList = asList(project1, project2);
     Flux<Project> projectFlux = dbUtils.saveProjectList(projectList);
     dbUtils.countAndExecuteFlux(projectFlux, 2);
 
     // ----- TASK TEST ELEMENTS SAVED IN DB ------------------------------------
-    task1 = taskWithID("3",
-                       "Mark",
-                       1000L
-                      ).create();
-    task2 = taskWithID("4",
-                       "Mark Zuck",
-                       7000L
-                      ).create();
+    Task task1 = taskWithID("3",
+                            "Mark",
+                            1000L
+                           ).create();
+    Task task2 = taskWithID("4",
+                            "Mark Zuck",
+                            7000L
+                           ).create();
     Flux<Task> taskFlux = dbUtils.saveTaskList(singletonList(task1));
     dbUtils.countAndExecuteFlux(taskFlux, 1);
 
     // ----- PROJECT-CHILD TEST ELEMENTS SAVED IN DB ---------------------------
-    project1Child = ProjectChildBuilder.projectChildWithID("D",
-                                                           "2022-07-07",
-                                                           "2023-07-07",
-                                                           4000L,
-                                                           Arrays.asList(task1, task2)
-                                                          )
-                                       .create();
-    projectChildList = List.of(project1Child);
+    ProjectChild project1Child = ProjectChildBuilder.projectChildWithID("D",
+                                                                        "2022-07-07",
+                                                                        "2023-07-07",
+                                                                        4000L,
+                                                                        Arrays.asList(task1, task2)
+                                                                       )
+                                                    .create();
+    List<ProjectChild> projectChildList = List.of(project1Child);
     Flux<ProjectChild> projectChildFlux = dbUtils.saveProjectChildList(projectChildList);
     dbUtils.countAndExecuteFlux(projectChildFlux, 1);
 
